--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+ 
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+html,body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden !important;
+}
 .btn-one, .btn-two {
     font-size: 14px;
     justify-content: space-between;
