--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -1,13 +1,15 @@
 .product_grid {
-    display: flex;
+    display: grid;
     margin-top: 20px;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     gap: 20px;
     flex-wrap: wrap;
     margin-bottom: 100px;
+    position: relative;
 }
 
 .product_grid .card {
-    width: 350px;
+    width: 100%;
     max-height: 450px;
     position: relative;
     padding: 10px;
@@ -129,7 +131,7 @@
 
   .product_grid .card .hover_details .more_info{
     border: 3px solid #333 !important;
-    padding: 9px 20px;
+    padding: 7px 10px;
     border-radius: 25px;
     font-weight: 500;
     font-size: 17px;
@@ -151,7 +153,7 @@
     width: 100%;
     white-space: nowrap;
     text-overflow: ellipsis;
-    font-size: 14px;
+    font-size: 12px;
     overflow: hidden;
     margin-top: 6px;
     display: flex;
